# feast_server_rust

./: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  README.md
.github/workflows/: ci.yml  docker-release.yml
cli/: Cargo.toml  build.rs
cli/benches/: body.json  grpc_server.rs  rest_server.rs
cli/src/: cli_options.rs  main.rs
config/: Cargo.toml
config/src/: model.rs
config/test_data/: local_redis.yaml  local_sqlite.yaml
core/: Cargo.toml  build.rs
core/src/: config.rs  feature_registry.rs  feature_store.rs  key_serialization.rs  lib.rs  model.rs  onlinestore.rs  proto_utils.rs  registry.rs  util.rs
core/src/feature_store/: feature_store.rs  response_builder.rs
core/src/onlinestore/: sqlite_onlinestore.rs
core/src/registry/: feature_registry.rs
core/test_data/: local_sqlite.yaml  registry.pb
feast-server-core/: Cargo.toml  build.rs  review_results.txt
feast-server-core/benches/: common.rs  feature_store.rs  onlinestore.rs  registry.rs
feast-server-core/src/: config.rs  error.rs  feature_store.rs  intern.rs  key_serialization.rs  lib.rs  model.rs  onlinestore.rs  proto_utils.rs  registry.rs  util.rs
feast-server-core/src/feature_store/: alias_test_review.txt  feature_store.rs  feature_store_impl.rs  response_builder.rs
feast-server-core/src/onlinestore/: redis.rs  sqlite_onlinestore.rs
feast-server-core/src/registry/: cached_registry.rs  feature_registry.rs  file_feature_registry.rs  file_registry.rs  local_registry.rs  s3_registry.rs  sql_registry.rs
feast-server-core/test_data/: online_store.db  registry.pb
feast-server-core/test_data/compose_redis/: compose.yaml  redis.conf
feast-server-core/test_data/compose_redis/7003/: redis.conf
feast-server-core/test_data/compose_redis/7005/: users.acl
feast-server-core/test_data/redis_sentinel/: compose.yaml  replica1.conf  replica2.conf  sentinel1.conf
feast-server-core/test_data/redis_singlenode_tls/: compose.yaml  redis.conf
feast-server-core/test_data/redis_singlenode_tls/certs/: client.crt  client.csr  client.ext  client.key  redis-cert.cnf  redis.key  root_ca.crt  root_ca.key  root_ca.srl  server.crt  server.csr  server.key
grpc-server/: Cargo.toml  build.rs
grpc-server/src/: lib.rs  server.rs
rest-server/: Cargo.toml
rest-server/src/: server.rs
