[workspace.package]
name = "feast_rust"
description = "Feat's feature server implemented in Rust"
version = "0.1.0"
edition = "2024"


[workspace]
members = [
    "feast-server-core", "rest-server"]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
anyhow = { version = "1.0.100" }
