[workspace.package]
name = "feast_rust"
description = "Feat's feature server implemented in Rust"
version = "0.1.0"
edition = "2024"

[profile.release]
strip = true
lto = true


[workspace]
members = [
    "cli",
    "feast-server-core",
    "rest-server"
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
anyhow = { version = "1.0.100" }
saphyr = { version = "0.0.6", features = ["default", "encoding"] }
tracing = {version = "0.1.41"}
