[workspace.package]
description = "Feat's feature server implemented in Rust"
version = "0.1.0"
edition = "2024"

[profile.release]
strip = true
lto = true


[workspace]
members = [
    "cli",
    "feast-server-core",
    "rest-server",
    "grpc-server"
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
anyhow = { version = "1.0.100" }
tracing = { version = "0.1.41" }
serde-saphyr = { version = "0.0.6" }
rustc-hash = "2.1.1"
