[package]
name = "cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "feast"
path = "src/main.rs"

[dependencies]
feast-server-core = { path = "../feast-server-core" }
rest-server = { path = "../rest-server" }
grpc-server = { path = "../grpc-server" }
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = {workspace = true}
clap = { version = "4.4.7", features = ["derive"] }
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
axum-server = "0.7.2"
