[package]
name = "cli"
version.workspace = true
edition.workspace = true
build = "build.rs"

[[bin]]
name = "feast"
path = "src/main.rs"

[dependencies]
feast-server-core = { path = "../feast-server-core" }
rest-server = { path = "../rest-server" }
grpc-server = { path = "../grpc-server" }
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = {workspace = true}
clap = { version = "4.4.7", features = ["derive"] }
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
axum-server = "0.7.2"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["async_tokio"] }
reqwest = { version = "0.12.5", default-features = false, features = ["json", "rustls-tls"] }
bytes = "1"
tonic = { version = "0.12", features = ["transport"] }
prost = "0.13"
prost-types = "0.13"
rustc-hash = { workspace = true }

[[bench]]
name = "rest_server"
harness = false

[[bench]]
name = "grpc_server"
harness = false

[build-dependencies]
tonic-build = { version = "0.12" }
