[package]
name = "config"
version = "0.1.0"
edition = "2024"


[dependencies]
serde = {version = "1.0.219", features = ["default", "derive"]}
serde_json = {version = "1.0.143", features = ["default"]}
saphyr = {version = "0.0.6", features = ["default", "encoding"]}
protobuf = "3.7.2"


[build-dependencies]
protobuf-codegen = {version = "3.7.2" }
protoc-bin-vendored = {version = "3.2.0" }
glob = {version = "0.3.3"}