[package]
name = "core"
version = "0.1.0"
edition = "2024"


[dependencies]
prost = "0.14.1"
prost-types = "0.14.1"
serde = { version = "1.0.219", features = ["default", "derive"] }
saphyr = { version = "0.0.6", features = ["default", "encoding"] }

[build-dependencies]
glob = { version = "0.3.3" }
prost-build = "0.14.1"
