[package]
name = "feast-server-core"
version.workspace = true
edition.workspace = true

[lib]
doctest = false


[dependencies]
anyhow = { workspace = true }
tokio = { workspace = true }
saphyr = { workspace = true }
tracing = { workspace = true }
prost = { version = "0.14.1", features = ["default", "derive"] }
prost-types = "0.14.1"
serde = { version = "1.0.219", features = ["default", "derive"] }
async-trait = { version = "0.1.89" }
arc-swap = { version = "1.7.1" }
chrono = { version = "0.4.42", features = ["default", "serde"] }
indexmap = { version = "2.11.4" }
# Registry dependencies
aws-config = { version = "1.8.6", features = ["behavior-version-latest"] }
aws-sdk-s3 = { version = "1.106.0" }
url = "2.5.7"
# Online store dependencies
sqlx = { version = "=0.8.6", features = ["sqlite", "chrono", "runtime-tokio"] }
redis = { version = "0.32.6", features = ["default", "tokio-comp", "safe_iterators"] }
futures = "0.3.31"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["async_tokio"] }

[[bench]]
name = "feature_store"
harness = false

[[bench]]
name = "registry"
harness = false

[[bench]]
name = "onlinestore"
harness = false


[build-dependencies]
glob = { version = "0.3.3" }
prost-build = { version = "0.14.1", features = ["default"] }
