[package]
name = "rest-server"
description.workspace = true
version.workspace = true
edition.workspace = true

[dependencies]
feast-server-core = { path = "../feast-server-core" }
anyhow = { workspace = true }
tokio = { workspace = true }
axum = { version = "0.8.5" }
axum-server = { version = "0.7.2", features = ["tls-rustls"] }
serde_json = "1.0.145"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }