[package]
name = "rest-server"
description.workspace = true
version.workspace = true
edition.workspace = true

[dependencies]
feast-server-core = { path = "../feast-server-core" }
anyhow = { workspace = true }
tracing = { workspace = true }
axum = { version = "0.8.5" }
axum-server = { version = "0.7.2", features = ["tls-rustls"] }
axum-prometheus = { version = "0.9.0" }
tower-http = { version = "0.6.6", features = ["default", "trace", "tracing"] }
serde = { workspace = true }
